fix: garantir instalação de devDependencies no Netlify
Adiciona NPM_CONFIG_PRODUCTION=false para que o Vite seja instalado
durante o build de produção

--- a/netlify.toml
+++ b/netlify.toml
@@ -12,6 +12,10 @@
   # Directory for Netlify Functions (if added later)
   functions = "netlify/functions"
 
+# Ensure devDependencies are installed (required for Vite)
+[build.environment]
+  NPM_CONFIG_PRODUCTION = "false"
+
 # ==============================================
 # SPA REDIRECT RULES
 # ==============================================
