--- a/mobile/package.json
+++ b/mobile/package.json
@@ -14,6 +14,8 @@
     "babel-preset-expo": "~54.0.9",
     "clsx": "^2.1.1",
     "expo": "~54.0.27",
+    "expo-barcode-scanner": "^13.0.1",
+    "expo-camera": "~17.0.10",
     "expo-constants": "~18.0.12",
     "expo-device": "~8.0.10",
     "expo-linear-gradient": "~15.0.8",
