fix: remove expo-barcode-scanner plugin from app.json

--- a/mobile/app.json
+++ b/mobile/app.json
@@ -31,8 +31,7 @@
     },
     "plugins": [
       "expo-router",
-      "expo-secure-store",
-      "expo-barcode-scanner"
+      "expo-secure-store"
     ],
     "extra": {
       "router": {},
