chore: simplifica nome do app mobile para 'Frentista'

--- a/mobile/app.json
+++ b/mobile/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "Posto Providência - Frentista",
+    "name": "Frentista",
     "slug": "posto-frentista",
     "scheme": "posto-frentista",
     "version": "1.0.1",
