--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite --port 3015",
-    "build": "node -e \"const fs = require('fs'); fs.writeFileSync('./public/version.json', JSON.stringify({version: Date.now().toString()}))\" && vite build",
-    "preview": "vite preview",
+    "dev": "bun --bun vite --port 3015",
+    "build": "bun -e \"Bun.write('./public/version.json', JSON.stringify({version: Date.now().toString()}))\" && bun --bun vite build",
+    "preview": "bun --bun vite preview",
     "validate": "./scripts/validate-rules.sh",
     "push": "./scripts/push.sh"
   },
