--- a/.context/workflow/status.yaml
+++ b/.context/workflow/status.yaml
@@ -1,46 +1,37 @@
 project:
-  name: "feature-fechamento-mensal"
-  scale: LARGE
-  started: "2026-01-25T20:53:58.472Z"
-  current_phase: C
+  name: "Gestão de Despesas e Lucro Janeiro 2026"
+  scale: SMALL
+  started: "2026-01-27T11:16:49.166Z"
+  current_phase: V
 
 phases:
   P:
     status: filled
-    started_at: "2026-01-25T20:53:58.472Z"
-    completed_at: "2026-01-25T20:54:32.794Z"
+    started_at: "2026-01-27T11:16:49.166Z"
+    completed_at: "2026-01-27T11:17:22.593Z"
   R:
-    status: filled
-    started_at: "2026-01-25T20:54:32.795Z"
-    completed_at: "2026-01-25T20:57:45.396Z"
+    status: skipped
+    reason: "Not required for scale SMALL"
   E:
     status: filled
-    started_at: "2026-01-25T20:57:45.397Z"
-    completed_at: "2026-01-25T21:02:39.712Z"
+    started_at: "2026-01-27T11:17:22.597Z"
+    completed_at: "2026-01-27T11:24:09.549Z"
   V:
-    status: filled
-    started_at: "2026-01-25T21:02:39.713Z"
-    completed_at: "2026-01-25T21:04:38.965Z"
+    status: in_progress
+    started_at: "2026-01-27T11:24:09.550Z"
   C:
-    status: completed
-    started_at: "2026-01-25T21:04:38.969Z"
-    completed_at: "2026-01-25T21:14:29.048Z"
-    outputs:
-      - path: "/home/thygas/.gemini/antigravity/scratch/Posto-Providencia/apps/web/src/components/fechamento-mensal/index.tsx"
-        status: filled
+    status: skipped
+    reason: "Not required for scale SMALL"
 
 execution:
   history:
-    - timestamp: "2026-01-25T21:14:29.048Z"
-      phase: C
-      action: completed
-  last_activity: "2026-01-25T21:14:29.048Z"
-  resume_context: "Fase C (Confirmação) concluída"
+    - timestamp: "2026-01-27T11:24:09.550Z"
+      phase: V
+      action: started
+  last_activity: "2026-01-27T11:24:09.550Z"
+  resume_context: "Fase V (Validação) em progresso"
 
 approval:
   plan_created: true
-  plan_approved: true
-  approved_by: "architect"
-  approved_at: "2026-01-25T20:57:45.030Z"
-  approval_notes: "Plano aprovado pelo usuário. Iniciando implementação."
+  plan_approved: false
 
