--- a/.github/workflows/build-mobile.yml
+++ b/.github/workflows/build-mobile.yml
@@ -16,11 +16,6 @@ jobs:
         with:
           bun-version: latest
 
-      - name: 🏗 Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20
-
       - name: 🏗 Setup Java
         uses: actions/setup-java@v4
         with:
@@ -30,24 +25,16 @@ jobs:
       - name: 🏗 Setup Android SDK
         uses: android-actions/setup-android@v3
 
-      - name: 🗑️ Remove legacy expo-cli
-        run: |
-          npm uninstall -g expo-cli || true
-          rm -rf /opt/hostedtoolcache/node/20.20.0/x64/lib/node_modules/expo-cli || true
-
-      - name: 📦 Install dependencies
-        run: |
-          bun install
-          cd apps/mobile && bun add -d @expo/cli
+      - name:  Install dependencies
+        run: bun install
 
       - name: 🛠 Prebuild (Generate Android Folder)
-        run: |
-          cd apps/mobile
-          ./node_modules/.bin/expo prebuild --platform android --clean
+        working-directory: apps/mobile
+        run: bunx expo prebuild --platform android --clean
 
       - name: 🔨 Build APK with Gradle
+        working-directory: apps/mobile/android
         run: |
-          cd apps/mobile/android
           chmod +x gradlew
           ./gradlew assembleRelease
 
