chore: remove mobile Expo/React Native - prepare for Kotlin native
BREAKING CHANGE: Remove entire apps/mobile folder

- Remove apps/mobile (Expo/React Native) due to persistent build issues
- Remove build-mobile.yml GitHub workflow
- Remove mobile-related documentation
- Clean package.json from mobile scripts and dependencies
- Keep apps/web and packages/* intact

Next step: Create native Android app with Kotlin + Jetpack Compose

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "posto-providencia-monorepo",
+  "name": "posto-providencia",
   "private": true,
-  "version": "3.0.0",
+  "version": "3.1.0",
   "type": "module",
   "workspaces": [
     "apps/*",
@@ -10,18 +10,12 @@
   "scripts": {
     "dev": "bun --bun vite --port 3015",
     "build": "bun -e \"Bun.write('./apps/web/public/version.json', JSON.stringify({version: Date.now().toString()}))\" && bun --bun vite build",
-    "build:mobile": "cd apps/mobile && npx expo export",
-    "build:all": "bun run build && cd apps/mobile && npx expo export",
     "preview": "bun --bun vite preview",
     "lint": "eslint . --ext .ts,.tsx",
     "type-check": "tsc --noEmit",
     "validate": "./scripts/validate-rules.sh",
     "push": "./scripts/push.sh",
-    "reset-data": "node scripts/reset-and-import-data.js",
-    "eas:update": "cd apps/mobile && npm run eas:update",
-    "eas:update:preview": "cd apps/mobile && npm run eas:update:preview",
-    "eas:build": "cd apps/mobile && npm run eas:build",
-    "eas:build:preview": "cd apps/mobile && npm run eas:build:preview"
+    "reset-data": "node scripts/reset-and-import-data.js"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.45.0",
@@ -47,7 +41,6 @@
     "@vitejs/plugin-react": "^5.0.0",
     "eslint": "^9.39.2",
     "pg": "^8.16.3",
-    "react-native-css-interop": "^0.2.1",
     "typescript": "~5.8.2",
     "vite": "^6.2.0",
     "xlsx": "^0.18.5"
