feat: refactor financial management, add revenue services and remove mobile app (moved to separate repo)

--- a/.context/workflow/status.yaml
+++ b/.context/workflow/status.yaml
@@ -1,47 +1,41 @@
 project:
-  name: "fix-fechamento-save-issue-new"
+  name: "gestao-financeira-backend-v2"
   scale: MEDIUM
-  started: "2026-01-29T14:00:52.725Z"
+  started: "2026-02-01T13:51:01.601Z"
   current_phase: V
 
 phases:
   P:
     status: filled
-    started_at: "2026-01-29T14:00:52.725Z"
-    completed_at: "2026-01-29T14:02:33.622Z"
+    started_at: "2026-02-01T13:51:01.601Z"
+    completed_at: "2026-02-01T13:51:44.294Z"
   R:
-    status: completed
-    started_at: "2026-01-29T14:02:33.623Z"
-    completed_at: "2026-01-29T14:02:37.000Z"
+    status: filled
+    started_at: "2026-02-01T13:51:44.296Z"
+    completed_at: "2026-02-01T13:51:48.520Z"
   E:
     status: filled
-    started_at: "2026-01-29T14:02:37.003Z"
-    completed_at: "2026-01-29T14:03:23.521Z"
+    started_at: "2026-02-01T13:51:48.523Z"
+    completed_at: "2026-02-01T14:00:09.202Z"
   V:
-    status: completed
-    started_at: "2026-01-29T14:03:23.522Z"
-    completed_at: "2026-01-29T14:04:16.777Z"
-    outputs:
-      - path: "/home/thygas/.gemini/antigravity/scratch/Posto-Providencia/apps/web/src/components/fechamento-diario/index.tsx"
-        status: filled
-      - path: "/home/thygas/.gemini/antigravity/scratch/Posto-Providencia/apps/web/src/components/fechamento-diario/hooks/useSessoesFrentistas.ts"
-        status: filled
+    status: in_progress
+    started_at: "2026-02-01T14:00:09.206Z"
   C:
     status: skipped
     reason: "Not required for scale MEDIUM"
 
 execution:
   history:
-    - timestamp: "2026-01-29T14:04:16.777Z"
+    - timestamp: "2026-02-01T14:00:09.206Z"
       phase: V
-      action: completed
-  last_activity: "2026-01-29T14:04:16.777Z"
-  resume_context: "Fase V (Validação) concluída"
+      action: started
+  last_activity: "2026-02-01T14:00:09.206Z"
+  resume_context: "Fase V (Validação) em progresso"
 
 approval:
   plan_created: true
   plan_approved: true
   approved_by: "architect"
-  approved_at: "2026-01-29T14:02:30.321Z"
-  approval_notes: "Plan is solid. Skipping data reload while saving is the correct approach to prevent UI clearing."
+  approved_at: "2026-02-01T13:51:40.352Z"
+  approval_notes: "Plano v2 aprovado. Próximo passo: Revisão e Execução."
 
